update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12374 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeedu/trunk/PKGBUILD
+++ b/kdeedu/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdebase-workspace' 'boost' 'openbabel' 'indilib' 'libnova' 'libqalculate' 'gsl')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'ocaml' 'facile' 'eigen' 'cfitsio' 'gmm++')
 options=('docs')
+install='kdeedu.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('f819cf9ae9c887f5787b5546de186604')
 
