update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12377 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdegraphics/trunk/PKGBUILD
+++ b/kdegraphics/trunk/PKGBUILD
@@ -13,6 +13,7 @@ depends=('kdelibs' 'kdebase-runtime' 'poppler-qt' 'libspectre' 'exiv2' 'sane' 'c
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 replaces=('gwenview' 'gwenview-i18n')
 options=('docs')
+install='kdegraphics.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('e5475d37dc0a12b6ce7e6dbebceb9340')
 
