update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12380 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdenetwork/trunk/PKGBUILD
+++ b/kdenetwork/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdebase-workspace' 'kdepimlibs' 'libvncserver' 'openslp' 'libidn' 'libotr' 'decibel' 'qca' 'rdesktop')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kdenetwork.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('e90ef5d3feccb4a2aade798ded81af28')
 
