update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12381 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdemultimedia/trunk/PKGBUILD
+++ b/kdemultimedia/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdelibs' 'kdebase-runtime' 'xine-lib' 'tunepimp' 'cdparanoia')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kdemultimedia.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('efbf12cf33aafb13848fda258d001322')
 
