update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12382 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdepim/trunk/PKGBUILD
+++ b/kdepim/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdepimlibs' 'gnokii' 'libxss' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kdepim.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('792ddf463a7ade5b4dbade0f8b7c3085')
 
