--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -13,6 +13,7 @@ depends=('kdepimlibs' 'kdebase-workspace')
 replaces=('kdeaddons')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kdeplasma-addons.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('c36f023c799175927b260c78b9150810')
 
