update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12383 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeplasma-addons/trunk/PKGBUILD
+++ b/kdeplasma-addons/trunk/PKGBUILD
@@ -13,6 +13,7 @@ depends=('kdepimlibs' 'kdebase-workspace')
 replaces=('kdeaddons')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kdeplasma-addons.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('c36f023c799175927b260c78b9150810')
 
