--- a/kdesdk/trunk/PKGBUILD
+++ b/kdesdk/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdebase-workspace' 'kdepimlibs' 'subversion')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost')
 options=('docs')
+install='kdesdk.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('268ea539de7cd5b07dc24d24f593dde1')
 
