update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12385 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdetoys/trunk/PKGBUILD
+++ b/kdetoys/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdebase-workspace')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kdetoys.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('6150f3daa22bce44f777579f2c13038b')
 
