update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12386 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeutils/trunk/PKGBUILD
+++ b/kdeutils/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdepimlibs' 'libzip' 'python' 'libarchive' 'kdebase-workspace')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'pyqt')
 options=('docs')
+install='kdeutils.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('ba8d72606f71afcb649d2b9871815359')
 
