--- a/kdewebdev/trunk/PKGBUILD
+++ b/kdewebdev/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdepimlibs' 'kdebase-runtime' 'tidyhtml')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kdewebdev.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('15b3861e2746549fb3ae2c5448ba27ef')
 
