update icon-db on install
git-svn-id: file:///srv/repos/svn-packages/svn@12388 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/konq-plugins/trunk/PKGBUILD
+++ b/konq-plugins/trunk/PKGBUILD
@@ -11,6 +11,7 @@ license=('LGPL')
 depends=('kdebase')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='konq-plugins.install'
 source=("http://download.kde.org/stable/${pkgver}/src/extragear/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('91ba68f763811deec646edb02e8b44ad')
 
