--- a/psi/trunk/PKGBUILD
+++ b/psi/trunk/PKGBUILD
@@ -1,13 +1,15 @@
 # $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
+
 pkgname=psi
 pkgver=0.12
-pkgrel=2
+pkgrel=3
 pkgdesc="Psi - Jabber client"
+url="http://psi-im.org/"
 license=('GPL')
 arch=('i686' 'x86_64')
-depends=('qca>=2.0' 'aspell' 'libxss')
-url="http://psi-im.org/"
+depends=('qca>=2.0' 'aspell' 'libxss' 'xdg-utils')
+install='psi.install'
 source=("http://downloads.sourceforge.net/psi/psi-${pkgver}.tar.bz2")
 md5sums=('47b654c944ef8766b860fe0645615d18')
 
