--- a/akonadi/trunk/PKGBUILD
+++ b/akonadi/trunk/PKGBUILD
@@ -3,13 +3,14 @@
 
 pkgname=akonadi
 pkgver=1.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="PIM layer, which provides an asynchronous API to access all kind of PIM data"
 arch=('i686' 'x86_64')
 url='http://www.akonadi-project.org'
 license=('LGPL')
-depends=('qt>=4.4')
+depends=('qt>=4.4' 'shared-mime-info')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'libxslt' 'mysql')
+install='akonadi.install'
 source=("http://akonadi.omat.nl/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('90039928f818a55a7e2a1bf852a32f2d')
 
