--- a/lancelot/trunk/PKGBUILD
+++ b/lancelot/trunk/PKGBUILD
@@ -2,23 +2,25 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=lancelot
-pkgver=1.0
+pkgver=1.0.3
 pkgrel=1
 pkgdesc="An application launcher menu (or ALI) for KDE 4 designed to provide a place from which all your jobs begin."
 arch=('i686' 'x86_64')
 url='http://lancelot.fomentgroup.org'
 license=('GPL' 'LGPL' 'FDL')
-depends=('kdebase-workspace')
+depends=('kdebase-workspace' 'shared-mime-info' 'xdg-utils')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'python')
 options=('docs')
-source=("http://downloads.sourceforge.net/lancelot-menu/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('20ad6b20817ac0f0e6903930c27e7d85')
+install='lancelot.install'
+#source=("http://downloads.sourceforge.net/lancelot-menu/${pkgname}-${pkgver}.tar.bz2")
+source=("ftp://ftp.archlinux.org/other/lancelot/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('4af213314b823dc4a96242aa9d96e009')
 
 build() {
 	cd $srcdir
 	mkdir build
 	cd build
-	cmake ../${pkgname} \
+	cmake ../${pkgname}-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr
 	make
