upgpkg: hal 0.5.11-4     fix FS#8677
git-svn-id: file:///srv/repos/svn-packages/svn@12446 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/hal/trunk/PKGBUILD
+++ b/hal/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=hal
 pkgver=0.5.11
-pkgrel=3
+pkgrel=4
 pkgdesc="Hardware Abstraction Layer"
 arch=(i686 x86_64)
 license=('GPL' 'custom')
@@ -19,14 +19,16 @@ source=(http://hal.freedesktop.org/releases/${pkgname}-${pkgver}.tar.bz2
 	cryptsetup_location.patch
 	hal-0.5.9-hide-diagnostic.patch
 	ntfs3g-valid-options.patch
-	fix-udev-compatibility.patch)
+	fix-udev-compatibility.patch
+	ntfs-mount-fix.patch)
 md5sums=('5e8935ab61bcb14afd2d4548084aace0'
          '277e96ac130d7bfce0b30f0b80db8782'
          '18dcdaa79952e2057c2e4745fbc8ad52'
          'c688a3c6574699365926f4fef7441545'
          '4d4b6801a1cedca22b8bdd9db73b16fb'
          '4242a2c78885e396f639d0cd5e33218c'
-         '1a33d73fa422df2f05b7e3483836f778')
+         '1a33d73fa422df2f05b7e3483836f778'
+         '96cf8835c30dc581c4fcf72b6ad7675e')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
@@ -36,6 +38,7 @@ build() {
   patch -Np0 -i ${startdir}/src/ntfs3g-valid-options.patch || return 1
   # Fix compatibility with udev 126 and later
   patch -Np1 -i ${startdir}/src/fix-udev-compatibility.patch || return 1
+  patch -p0 -i ${srcdir}/ntfs-mount-fix.patch || return 1
 
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
               --libexecdir=/usr/lib/hal --enable-static=no \
