--- a/gmp/trunk/PKGBUILD
+++ b/gmp/trunk/PKGBUILD
@@ -1,20 +1,25 @@
 # $Id$
 # Maintainer: Thomas Baechler <thomas@archlinux.org>
 pkgname=gmp
-pkgver=4.2.2
-pkgrel=2
+pkgver=4.2.3
+pkgrel=1
 pkgdesc="A free library for arbitrary precision arithmetic"
 arch=(i686 x86_64)
 depends=('gcc-libs')
 license=('LGPL3')
 options=(!libtool)
-source=(ftp://ftp.gnu.org/gnu/gmp/gmp-${pkgver}.tar.gz)
+install=gmp.install
+source=(ftp://ftp.gnu.org/gnu/gmp/gmp-${pkgver}.tar.bz2)
 url="http://gmplib.org/"
-md5sums=('1def49df60248a08374ecd6cdcaa5d3d')
+md5sums=('7cc56604c03134f2c4bc1fb1ea748f6f')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --enable-cxx --build=${CHOST} || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  ./configure --prefix=/usr --enable-cxx --infodir=/usr/share/info || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make check || return 1
+  make DESTDIR="${pkgdir}" install || return 1
+  cd "${pkgdir}/usr/share/info"
+  rm -f dir
+  gzip * || return 1
 }
