--- a/mpfr/trunk/PKGBUILD
+++ b/mpfr/trunk/PKGBUILD
@@ -3,20 +3,24 @@
 # Contributor: damir <damir@archlinux.org>
 
 pkgname=mpfr
-pkgver=2.3.1
+pkgver=2.3.2
 pkgrel=1
 pkgdesc="multiple-precision floating-point library"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
 url="http://www.mpfr.org/"
-depends=('gmp>=4.2.2')
+depends=('gmp>=4.2.3')
 options=('!libtool')
+install=mpfr.install
 source=(http://www.mpfr.org/mpfr-current/mpfr-${pkgver}.tar.gz)
-md5sums=('cf882c61f5da60c9f3a61746b8264dd2')
+md5sums=('3559d1713b97baef53f241c374be291a')
 		  
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --enable-thread-safe --enable-shared || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
+  cd "${pkgdir}/usr/share/info"
+  rm -f dir
+  gzip * || return 1
 }
