--- a/qt3/trunk/PKGBUILD
+++ b/qt3/trunk/PKGBUILD
@@ -1,21 +1,23 @@
 # $Id$
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 # Contributor: John Proctor <jproctor@prium.net>
+
 pkgname=qt3
 pkgver=3.3.8
-pkgrel=8
+pkgrel=9
 pkgdesc="The QT gui toolkit."
 arch=(i686 x86_64)
 license=('GPL')
 url="http://www.trolltech.com/products/qt/index.html"
 pkgfqn=qt-x11-free-${pkgver}
 install=qt.install
-depends=('libpng' 'libjpeg' 'libxmu' 'libxcursor' 'libxinerama' 'mesa' \
-	 'libxft' 'libxrandr')
-makedepends=('mysql' 'postgresql>=8.2.3' 'sqlite3' 'unixodbc' 'libmng')
+depends=('libpng' 'libxmu' 'libxcursor' 'libxinerama' 'mesa' \
+	 'libxft' 'libxrandr' 'libmng')
+makedepends=('mysql' 'postgresql>=8.2.3' 'unixodbc' 'sqlite3')
+optdepends=('libmysqlclient' 'postgresql-libs' 'unixodbc')
 source=(ftp://ftp.trolltech.com/qt/source/${pkgfqn}.tar.bz2 qt.profile \
         qt-copy-kde-patches.tar.bz2 qt-patches.tar.bz2 utf8-bug-qt3.diff \
-	qt-font-default-subst.diff mysql.patch)
+	qt-font-default-subst.diff mysql.patch eastern_asian_languagues.diff)
 options=(!libtool)
 md5sums=('cf3c43a7dfde5bfb76f8001102fe6e85'
          'f72d1eb4eb49b9a9467c1f6035194266'
@@ -23,7 +25,8 @@ md5sums=('cf3c43a7dfde5bfb76f8001102fe6e85'
          'c8937968e9807b3cdcdf0505728d99ce'
          'f6b3b39040f2b8f19ba1cf1445468c28'
          '9370d82e85f2c799335ed0dcc1d53189'
-         '7d40ed1bd40d33d8b9b27a2076a5d22a')
+         '7d40ed1bd40d33d8b9b27a2076a5d22a'
+         '616f1f3029cf8375256ad6a406de3549')
 
 # qt-copy-kde-patches come from http://websvn.kde.org/trunk/qt-copy/patches/
 # other qt-patches come from fedora and gentoo
@@ -49,6 +52,8 @@ build() {
   patch -Np0 -i ../qt-font-default-subst.diff || return 1
   # fix segfaults on exit when using mysql DB driver
   patch -Np0 -i ../mysql.patch || return 1
+  # fix CJK font/chars select error (FS#11245)
+  patch -p1 -i ${srcdir}/eastern_asian_languagues.diff || return 1
   # start compiling qt
   sed -i 's|-cp -P -f|-cp -L -f|' qmake/Makefile.unix
   rm -rf doc/html examples tutorial
@@ -93,6 +98,7 @@ build() {
   sed -i "s|-L$startdir/src/$pkgfqn/lib ||g" $startdir/pkg/opt/qt/lib/*.prl
   install -D -m755 qmake/qmake $startdir/pkg/opt/qt/bin/qmake
   install -D -m755 $startdir/qt.profile $startdir/pkg/etc/profile.d/qt3.sh
+  ln -sf /opt/qt/bin/qtconfig $startdir/pkg/opt/qt/bin/qt3config 
   rm -f $startdir/pkg/opt/qt/mkspecs/linux-g++$ARCH/linux-g++$ARCH
 
   # install man pages
