--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,8 +1,9 @@
 # $Id$
-# Maintainer: judd <jvinet@zeroflux.org>
+# Maintainer: Jan de Groot <jgc@archlinux.org>
+# Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=libtasn1
-pkgver=1.4
+pkgver=1.5
 pkgrel=1
 pkgdesc="The ASN.1 library used in GNUTLS"
 arch=(i686 x86_64)
@@ -11,11 +12,11 @@ url="http://www.gnu.org/software/gnutls/"
 depends=('glibc')
 options=('!libtool')
 source=(ftp://ftp.gnutls.org/pub/gnutls/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('a733ecdfed3517910e627d24e050979f')
+md5sums=('7d7e8e21d1159a0b4c0aa69469eef565')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
