upgpkg: udev 128-3     Set prefix to "" so all paths do not get double-prefixed with a slash. This fixes gnome mounting problems because devices show up as //dev/sr0
git-svn-id: file:///srv/repos/svn-packages/svn@12484 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/udev/trunk/PKGBUILD
+++ b/udev/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=udev
 pkgver=128
-pkgrel=2
+pkgrel=3
 pkgdesc="The userspace dev tools (udev)"
 arch=(i686 x86_64)
 url="http://www.kernel.org/pub/linux/utils/kernel/hotplug/udev.html"
@@ -36,7 +36,7 @@ md5sums=('a21a954bb1306bc9c6c3f27792c6e508'
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/ --mandir=/usr/share/man --includedir=/usr/include
+  ./configure --prefix="" --mandir=/usr/share/man --includedir=/usr/include
   make || return 1
   make DESTDIR=$startdir/pkg install
 
