--- a/git/trunk/PKGBUILD
+++ b/git/trunk/PKGBUILD
@@ -2,16 +2,19 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=git
-pkgver=1.6.0.1
+pkgver=1.6.0.2
 pkgrel=1
 pkgdesc="GIT - the stupid content tracker"
 arch=(i686 x86_64)
 url="http://git.or.cz/"
 license=('GPL2')
 depends=('curl' 'expat>=2.0' 'perl-error' 'perl>=5.10.0')
+optdepends=('tk: gitk and git gui'
+            'perl-libwww: git svn'
+            'subversion: git svn'
+            'cvsps: git cvsimport')
 replaces=('git-core')
 provides=('git-core')
-install=git.install
 source=("http://kernel.org/pub/software/scm/git/${pkgname}-${pkgver}.tar.bz2" \
         "http://kernel.org/pub/software/scm/git/git-manpages-${pkgver}.tar.bz2")
 
@@ -21,7 +24,7 @@ build() {
     prefix=/usr gitexecdir=/usr/lib/git-core || return 1
   make THREADED_DELTA_SEARCH=1 \
     prefix=/usr gitexecdir=/usr/lib/git-core \
-	INSTALLDIRS=vendor DESTDIR=${pkgdir} install
+    INSTALLDIRS=vendor DESTDIR=${pkgdir} install
   
   # let's plop gitweb in /usr/share
   mkdir -p $pkgdir/usr/share/ || return 1
@@ -42,5 +45,5 @@ build() {
   rm -rf $pkgdir/usr/lib/perl5
 }
 
-md5sums=('264701ebd9036ca2458358f01aa6c093'
-         '07b357210b59a1140200815c682fda34')
+md5sums=('1e4d9bfc1cb0abf165d4de93b5172324'
+         '30bd29d96b4576ef8b7b48ad791f613e')
