upgpkg: openobex 1.3-3     Rebuild for bluez - add license
git-svn-id: file:///srv/repos/svn-packages/svn@12492 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openobex/trunk/PKGBUILD
+++ b/openobex/trunk/PKGBUILD
@@ -3,25 +3,24 @@
 
 pkgname=openobex
 pkgver=1.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Implementation of the Object Exchange (OBEX) protocol; OBEX is a session protocol and can best be described as a binary HTTP protocol. "
 arch=(i686 x86_64)
+license=('GPL' 'LGPL')
 url="http://openobex.triq.net/"
-depends=('glibc' 'bash' 'libusb' 'bluez-libs')
+depends=('bluez>=4.1')
 options=('!libtool')
-source=(http://umn.dl.sourceforge.net/sourceforge/openobex/$pkgname-$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/sourceforge/openobex/${pkgname}-${pkgver}.tar.gz)
 md5sums=('feaa5dfe5151c0e70e8f868fa4648a43')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  [ "${CARCH}" = "x86_64" ] && export CFLAGS="${CFLAGS} -fPIC"
   ./configure --enable-apps \
   	      --enable-irda \
       	      --enable-bluetooth \
 	      --enable-usb \
-	      --prefix=/usr
-  
-  [ "$CARCH" = "x86_64" ] && export CFLAGS="$CFLAGS -fPIC"
-
+	      --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=$startdir/pkg/ install
+  make DESTDIR="${pkgdir}" install || return 1
 }
