--- a/obex-data-server/trunk/PKGBUILD
+++ b/obex-data-server/trunk/PKGBUILD
@@ -3,20 +3,22 @@
 # Contributor: Keerthi <keerthi.linux@gmail.com>
 
 pkgname=obex-data-server
-pkgver=0.3
-pkgrel=3
+pkgver=0.3.4
+pkgrel=1
 pkgdesc="obex-data-server is D-Bus service providing high-level OBEX client and server side functionality."
 arch=('i686' 'x86_64')
 url="http://wiki.muiline.com/obex-data-server"
 license=('GPL')
-depends=('glib2' 'dbus' 'dbus-glib' 'libusb' 'bluez-libs' 'openobex')
-makedepends=()
-source=(http://tadas.dailyda.com/software/$pkgname-$pkgver.tar.gz)
-md5sums=('d665127eb9d43d87b98cfff07b8fac60')
+depends=('dbus-glib>=0.76' 'bluez>=4.1' 'openobex>=1.3-3')
+source=(http://tadas.dailyda.com/software/${pkgname}-${pkgver}.tar.gz
+	obex-data-server-0.3.4-bluez4.patch)
+md5sums=('5c71d24e8d471cc294d9d47a8f8de971'
+         '0ffcebc3a1dde3e6b5670f4003b847c7')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/usr --enable-system-config --sysconfdir=/etc
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i "${srcdir}/obex-data-server-0.3.4-bluez4.patch" || return 1
+  ./configure --prefix=/usr --enable-system-config --sysconfdir=/etc || return 1
   make || return 1
-  make DESTDIR=$startdir/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
