--- a/texlive-core/trunk/PKGBUILD
+++ b/texlive-core/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Firmicus <firmicus ατ gmx δοτ net>
 
 pkgname=texlive-core
-pkgver=2008.10429
+pkgver=2008.10548
 pkgrel=1
 pkgdesc="TeX Live core distribution"
 license=('GPL')
@@ -17,7 +17,7 @@ url='http://tug.org/texlive/'
 source=("http://dev.archlinux.org/~francois/texlive/src/$pkgname-src.zip")
 install=texlive.install
 backup=(usr/share/texmf-config/tex/context/config/cont-usr.tex)
-md5sums=('94d72faa07b9db5643aab07bd4d7827a')
+md5sums=('c78476fdcf8ee51e9ec5ccec43d8136e')
 
 build() {
    cd $startdir/src
@@ -25,9 +25,9 @@ build() {
 	   lzma --force -dc $p | tar xf - || return 1
    done
    install -m755 -d $startdir/pkg/usr/share || return 1
-   find texmf-dist -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
-   find texmf-dist -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
-
+   find texmf-dist -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || return 1
+   find texmf-dist -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || return 1
+   find $startdir/pkg/usr/share/texmf-dist/scripts -type f -exec chmod a+x '{}' \; || return 1
    # copy config file to texmf-config
    mkdir -p $startdir/pkg/usr/share/texmf-config/tex/context/config
    cp -a $startdir/pkg/usr/share/texmf-dist/tex/context/config/cont-usr.tex \
@@ -36,4 +36,6 @@ build() {
   # remove obsolete stuff (we don't provide the omega and aleph binaries anyway)
   rm -rf $startdir/pkg/usr/share/texmf-dist/omega
   rm -f $startdir/pkg/usr/share/texmf-dist/tex/plain/config/{omega,aleph}.ini
+  # more cleanup
+  rm -rf $startdir/pkg/usr/share/texmf-dist/scripts/context/stubs/mswin/
 }
