fix permissions of scripts
git-svn-id: file:///srv/repos/svn-packages/svn@12501 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/texlive-htmlxml/trunk/PKGBUILD
+++ b/texlive-htmlxml/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=texlive-htmlxml
 pkgver=2008.10385
-pkgrel=1
+pkgrel=2
 pkgdesc="TeX Live - Packages to convert LaTeX to XML/HTML, and typeset XML/SGML"
 license=('GPL')
 arch=('i686' 'x86_64')
@@ -22,5 +22,5 @@ build() {
    install -m755 -d $startdir/pkg/usr/share || return 1
    find texmf-dist -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
    find texmf-dist -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
-   # remove scripts already provided by texlive-bin
+   find $startdir/pkg/usr/share/texmf-dist/scripts -type f -exec chmod a+x '{}' \; || return 1
 }
