--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=texlive-langextra
 pkgver=2008.9736
-pkgrel=1
+pkgrel=2
 pkgdesc="TeX Live - Bundle of all extra language support"
 license=('GPL')
 arch=('i686' 'x86_64')
@@ -24,4 +24,5 @@ build() {
    install -m755 -d $startdir/pkg/usr/share || return 1
    find texmf* -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
    find texmf* -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
+   chmod a+x $startdir/pkg/usr/share/texmf-dist/scripts/bengali/ebong.py
 }
