--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Firmicus <firmicus āt gmx dōt net>
 
 pkgname=texlive-latexextra
-pkgver=2008.10434
+pkgver=2008.10547
 pkgrel=1
 pkgdesc="TeX Live - Large collection of add-on packages for LaTeX"
 license=('GPL')
@@ -13,7 +13,7 @@ groups=('texlive-most')
 url='http://tug.org/texlive/'
 source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
-md5sums=('a7a20603f343ae6910ca33137fda8ce8')
+md5sums=('85d13888cbcb9897cb77e149a6c9d7ea')
 
 build() {
    cd $startdir/src
@@ -23,4 +23,10 @@ build() {
    install -m755 -d $startdir/pkg/usr/share || return 1
    find texmf* -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
    find texmf* -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
+   find $startdir/pkg/usr/share/texmf-dist/scripts -type f -exec chmod a+x '{}' \; || return 1
+   rm $startdir/pkg/usr/share/texmf-dist/scripts/glossaries/makeglossaries.bat
+   rm $startdir/pkg/usr/share/texmf-dist/scripts/pst-pdf/ps4pdf.bat*
+   rm $startdir/pkg/usr/share/texmf-dist/scripts/shipunov/biokey2html.bat
+
+   
 }
