--- a/texlive-pictures/trunk/PKGBUILD
+++ b/texlive-pictures/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Firmicus <firmicus āt gmx dōt net>
 
 pkgname=texlive-pictures
-pkgver=2008.10353
+pkgver=2008.10506
 pkgrel=1
 pkgdesc="TeX Live - Packages for drawings graphics"
 license=('GPL')
@@ -12,7 +12,7 @@ groups=('texlive-most')
 url='http://tug.org/texlive/'
 source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
-md5sums=('d83e6849c7c199fb9dd5911f1198bef7')
+md5sums=('4a1db9568ce47f03c8f92f7b8d86b9a0')
 
 build() {
    cd $startdir/src
@@ -22,4 +22,5 @@ build() {
    install -m755 -d $startdir/pkg/usr/share || return 1
    find texmf* -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
    find texmf* -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
+   find $startdir/pkg/usr/share/texmf-dist/scripts -type f -exec chmod a+x '{}' \; || return 1
 }
