--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Firmicus <firmicus āt gmx dōt net>
 
 pkgname=texlive-pstricks
-pkgver=2008.10319
+pkgver=2008.10565
 pkgrel=1
 pkgdesc="TeX Live - Additional PSTricks packages"
 license=('GPL')
@@ -12,7 +12,7 @@ groups=('texlive-most')
 url='http://tug.org/texlive/'
 source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
-md5sums=('ce74393a9f17419fa19e68dbdb3de844')
+md5sums=('a4f8298172c52cb14bc3a8b9d643405f')
 
 build() {
    cd $startdir/src
@@ -22,4 +22,5 @@ build() {
    install -m755 -d $startdir/pkg/usr/share || return 1
    find texmf* -type d -exec install -d -m755 $startdir/pkg/usr/share/'{}' \; || exit 1
    find texmf* -type f -exec install -m644 '{}' $startdir/pkg/usr/share/'{}' \; || exit 1
+   chmod a+x $startdir/pkg/usr/share/texmf-dist/scripts/pst2pdf/pst2pdf.pl
 }
