upgpkg: libtasn1 1.5-2     Generate info/dir from postinstall
git-svn-id: file:///srv/repos/svn-packages/svn@12535 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libtasn1/trunk/PKGBUILD
+++ b/libtasn1/trunk/PKGBUILD
@@ -4,13 +4,14 @@
 
 pkgname=libtasn1
 pkgver=1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="The ASN.1 library used in GNUTLS"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
 url="http://www.gnu.org/software/gnutls/"
 depends=('glibc')
 options=('!libtool')
+install=libtasn1.install
 source=(ftp://ftp.gnutls.org/pub/gnutls/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('7d7e8e21d1159a0b4c0aa69469eef565')
 
@@ -19,4 +20,8 @@ build() {
   ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
+
+  cd "${pkgdir}/usr/share/info" || return 1
+  rm -f dir
+  gzip * || return 1
 }
