--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: lydgate
 
 pkgname=mlocate
-pkgver=0.20
-pkgrel=2
+pkgver=0.21
+pkgrel=1
 pkgdesc="Faster merging drop-in for slocate"
 arch=(i686 x86_64)
 url="http://carolina.mff.cuni.cz/~trmac/blog/mlocate"
@@ -16,7 +16,7 @@ replaces=('slocate')
 depends=('glibc')
 backup=('etc/updatedb.conf')
 install=mlocate.install
-source=("https://fedorahosted.org/mlocate/attachment/wiki/MlocateDownloads/mlocate-$pkgver.tar.bz2?format=raw" \
+source=("https://fedorahosted.org/releases/m/l/mlocate/mlocate-$pkgver.tar.bz2" \
 	updatedb.conf updatedb.cron.daily)
 build() {
   cd "$startdir"/src/$pkgname-$pkgver
@@ -42,6 +42,3 @@ build() {
   install -d -m750 -g21 var/lib/locate
 }
 
-md5sums=('ad5e4eb1f2aecf1a5af9fe36c6e297f4'
-         '08f642828fe8a6a0c8e5059133c9a9e2'
-         'eee7f9db8c6145724313af6fd5fe9d66')
