--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,5 +1,6 @@
 # $Id$
-# Maintainer: judd <jvinet@zeroflux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
+
 pkgname=man-pages
 pkgver=3.09
 _posixver=2003-a
