upgpkg: man-pages 3.09-1
git-svn-id: file:///srv/repos/svn-packages/svn@12559 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/man-pages/trunk/PKGBUILD
+++ b/man-pages/trunk/PKGBUILD
@@ -1,5 +1,6 @@
 # $Id$
-# Maintainer: judd <jvinet@zeroflux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
+
 pkgname=man-pages
 pkgver=3.09
 _posixver=2003-a
