--- a/openjdk6/trunk/PKGBUILD
+++ b/openjdk6/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 
 pkgname=openjdk6
 pkgver=1.2
-_date=20080825
-pkgrel=4
+_date=20080915
+pkgrel=5
 pkgdesc='Free Java environment based on OpenJDK 6.0 with IcedTea6 replacing binary plugs.'
 url='http://icedtea.classpath.org'
 arch=('i686' 'x86_64')
 license=('GPL')
-_openjdk_version=b11
-_openjdk_date=10_jul_2008
+_openjdk_version=b12
+_openjdk_date=28_aug_2008
 depends=('gcc-libs' 'xdg-utils' 'hicolor-icon-theme')
-makedepends=('alsa-lib' 'libxtst' 'giflib' 'libxp' 'gtk2' 'nspr' 'zlib' 'freetype2' 'libjpeg' 'libx11' 'libcups' 'patch' 'xalan-java' 'xulrunner>=1.9.0.1' 'apache-ant>=1.7.0' 'autoconf' 'unzip')
+makedepends=('alsa-lib' 'libxtst' 'giflib' 'libxp' 'gtk2' 'nspr' 'zlib' 'freetype2' 'libjpeg' 'libx11' 'libcups' 'patch' 'xalan-java' 'xulrunner>=1.9.0.1' 'apache-ant>=1.7.0' 'autoconf' 'unzip' 'rhino')
 conflicts=('jdk' 'j2sdk' 'java-environment' 'j2re' 'java-runtime' 'jre')
 provides=('jdk=6' 'j2sdk' 'java-environment' 'jre=6' 'j2re' 'java-runtime')
 options=(!emptydirs)
@@ -26,8 +26,8 @@ source=(http://download.java.net/openjdk/jdk6/promoted/${_openjdk_version}/openj
 	fontconfig-paths.diff
 	openjdk6.profile)
 noextract=(openjdk-6-src-${_openjdk_version}-${_openjdk_date}.tar.gz)
-md5sums=('8e60cdac02ec1b2d8ddb9d7369be69df'
-         'f374729cb5dd59ff3b494441555eb7d6'
+md5sums=('b53e1ef643909ce82721ee4c970d958b'
+         '2fb2602b9386c8f9b3780a5069fc6190'
          '5da3e39fa60985576c4f37d1491efbe2'
          'f7e7a212e50abb56a6ef1a2b1bd27405'
          'ed2e808df2d2fc2ea7dae5139d475192'
@@ -87,8 +87,7 @@ build() {
   # http://icedtea.classpath.org/bugzilla/show_bug.cgi?id=179
   ./configure --with-parallel-jobs=${HOTSPOT_BUILD_JOBS} \
 	--with-xalan2-jar=/usr/share/java/xalan.jar \
-	--without-rhino \
-	$JCONF
+	$JCONF #	--without-rhino \
   LD_PRELOAD="" make || return 1
   
   install -m755 -d ${pkgdir}/${_jvmdir}/jre
