--- a/tzdata/trunk/PKGBUILD
+++ b/tzdata/trunk/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=tzdata
-pkgver=2008e
+pkgver=2008f
 pkgrel=1
 _tzcode=2008e
-_tzdata=2008e
+_tzdata=2008f
 pkgdesc="Sources for time zone and daylight saving time data"
 arch=('i686' 'x86_64')
 url="http://www.twinsun.com/tz/tz-link.htm"
@@ -18,7 +18,7 @@ source=(ftp://elsie.nci.nih.gov/pub/tzcode${_tzcode}.tar.gz \
         ftp://elsie.nci.nih.gov/pub/${pkgname}${_tzdata}.tar.gz \
         Makefile.patch)
 md5sums=('12ec2d85324ddcba39db1471a03f486b'
-         '3b4578110a3d193ed9a00d61f27aba28'
+         'aa3b077a7b786d46c131303b1d75deee'
          'a64ed97d1fc03c66ee8612c0d9f40507')
 
 build() {
