--- a/libbtctl/trunk/PKGBUILD
+++ b/libbtctl/trunk/PKGBUILD
@@ -3,25 +3,24 @@
 
 pkgname=libbtctl
 pkgver=0.10.0
-pkgrel=1.1
+pkgrel=2
 pkgdesc="GObject wrapper for Bluetooth functionality."
 arch=('i686' 'x86_64')
 url="http://www.usefulinc.com/software/gnome-bluetooth/"
-license=('GPL')
-depends=('glib2>=2.14.1' 'openobex>=1.3')
-makedepends=('intltool' 'python' 'gtk2') # 'gtk-sharp'
+license=('GPL' 'LGPL')
+depends=('glib2>=2.18.0' 'openobex>=1.3-3' 'bluez>=4.1')
+makedepends=('intltool' 'python' 'gtk2')
 options=('!libtool' '!makeflags')
-source=(http://ftp.gnome.org/pub/GNOME/sources/libbtctl/0.10/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('83d5f90efb2b26d1bd12a668940d02ba')
+source=(http://ftp.gnome.org/pub/GNOME/sources/libbtctl/0.10/${pkgname}-${pkgver}.tar.bz2
+	libbtctl-bluez4.patch)
+md5sums=('83d5f90efb2b26d1bd12a668940d02ba'
+	 '7ffbf62cbaa42be15ffb26ff71cc06cd')
 
 build() {
-  # export MAKEFLAGS="-j1"
-  # export MONO_SHARED_DIR=${startdir}/src/.wabi
-  # mkdir -p ${MONO_SHARED_DIR}
-
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --disable-gtk-doc # --enable-mono
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np0 -i "${srcdir}/libbtctl-bluez4.patch" || return 1
+  ./configure --prefix=/usr --disable-gtk-doc \
+    --disable-mono --disable-static || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install
-  # rm -rf $MONO_SHARED_DIR
+  make DESTDIR="${pkgdir}" install || return 1
 }
