--- a/netcfg/trunk/PKGBUILD
+++ b/netcfg/trunk/PKGBUILD
@@ -1,15 +1,15 @@
 # $Id$
 # Maintainer: James Rayner <james@archlinux.org>
 pkgname=netcfg
-pkgver=2.1.0_RC1
+pkgver=2.1.0
 pkgrel=1
 pkgdesc="Network configuration and profile scripts"
 url="http://archlinux.org"
 license=("BSD")
 backup=(etc/iftab)
-depends=(wireless_tools wpa_supplicant net-tools mktemp)
+depends=(wireless_tools wpa_supplicant net-tools)
+optdepends=(mktemp dialog)
 source=(http://ftp.archlinux.org/other/netcfg/netcfg-$pkgver.tar.gz)
-md5sums=('8c8dd893a7c1b071a652ef82af71457d')
 
 #source=(netcfg-$pkgver.tar.gz)
 arch=(i686 x86_64)
