--- a/aria2/trunk/PKGBUILD
+++ b/aria2/trunk/PKGBUILD
@@ -1,22 +1,23 @@
 # $Id$
 # Maintainer: Jeff Mickey <jeff@archlinux.org>
+# Maintainer: Alexander Fehr <pizzapunk gmail com>
 
 pkgname=aria2
-pkgver=0.14.0
+pkgver=0.15.3
 pkgrel=1
-pkgdesc="aria2 is a download utility with resuming and segmented downloading. Supports HTTP/HTTPS/FTP/BitTorrent/Metalink."
-arch=(i686 x86_64)
+pkgdesc="Download utility that supports HTTP(S), FTP, BitTorrent, and Metalink"
+arch=('i686' 'x86_64')
 url="http://aria2.sourceforge.net/"
 license=('GPL')
-depends=('gnutls>=2.4.1' 'gcc-libs>=4.3.1' 'libxml2>=2.6.32')
+depends=('gnutls' 'libxml2')
 makedepends=('c-ares')
-source=(http://downloads.sourceforge.net/sourceforge/$pkgname/${pkgname}c-$pkgver.tar.bz2)
-md5sums=('67870ae5f3bddb0d4fc064d3f5c43a6c')
-sha1sums=('787c48c3304847370bf19af6976b4837042fbfd8')
+source=(http://downloads.sourceforge.net/aria2/aria2c-$pkgver.tar.bz2)
+md5sums=('5bad1ec6c7a94716760eeea17275b79f')
 
 build() {
-  cd $startdir/src/${pkgname}c-$pkgver
+  cd "$srcdir/aria2c-$pkgver"
+
   ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=$startdir/pkg install || return 1
+  make DESTDIR="$pkgdir" install || return 1
 }
