--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # $Id$
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 pkgname=hwdetect
-pkgver=0.9
-pkgrel=3
+pkgver=0.9.1
+pkgrel=1
 pkgdesc="Hardware detection script with loading modules and mkinitcpio.conf / rc.conf support"
 arch=(i686 x86_64)
 license=('custom:none')
@@ -15,4 +15,4 @@ build() {
   install -D -m 755 $startdir/src/hwdetect $startdir/pkg/sbin/hwdetect
 }
 
-
+md5sums=('9910a69cdaa1ed29894041a022e5bea5')
