--- a/smc/trunk/PKGBUILD
+++ b/smc/trunk/PKGBUILD
@@ -6,19 +6,20 @@ pkgname=smc
 replaces=('smclone')
 conflicts=('smclone')
 pkgver=1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Secret Maryo Chronicles"
 arch=(i686 x86_64)
 url="http://www.secretmaryo.org/"
 license=('GPL3')
 makedepends=(autoconf automake)
-depends=(sdl_image sdl_ttf sdl_mixer cegui boost libpng)
-source=(http://dl.sourceforge.net/sourceforge/smclone/$pkgname-$pkgver.tar.bz2 smc.desktop smc.png)
+depends=(sdl_image sdl_ttf sdl_mixer cegui boost=1.36.0 libpng)
+source=(http://dl.sourceforge.net/sourceforge/smclone/$pkgname-$pkgver.tar.bz2 smc.desktop smc.png boost-1.36.0.patch)
 md5sums=('72d10648435c349988dcd053e5fe64fe' '80fe208132ff41dd7677a53ee429ecdb'
-         'efca7580e28748625eb676c9d24ee122')
+         'efca7580e28748625eb676c9d24ee122' '18f9c82a8d62c80bcadb8c65bb829ba3')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
+  patch -Np1 -i $srcdir/boost-1.36.0.patch
   ./autogen.sh || return 1
   ./configure --prefix=/usr || return 1
   make install LDADD=-lpng DESTDIR=$startdir/pkg || return 1
@@ -26,4 +27,3 @@ build() {
   install -D -m644 $startdir/src/$pkgname.desktop $startdir/pkg/usr/share/applications/$pkgname.desktop
   install -D -m644 $startdir/src/$pkgname.png $startdir/pkg/usr/share/pixmaps/$pkgname.png
 }
-
