upgpkg: openoffice-base-beta 3.0_ooo300_m6-1
git-svn-id: file:///srv/repos/svn-packages/svn@12675 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openoffice-base-beta/trunk/PKGBUILD
+++ b/openoffice-base-beta/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base-beta
-pkgver=3.0_ooo300_m6 # =RC1
+pkgver=3.0_ooo300_m6 # m5=RC1
 pkgrel=1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=(i686 x86_64)
@@ -31,7 +31,8 @@ source=(${pkgname}-${_OO_milestone}.tar.gz
 	buildfix-gcc43.diff
 	shell.patch
 	system_hsqldb.diff
-	buildfix-openjdk-6-no-rhino.diff)
+	buildfix-openjdk-6-no-rhino.diff
+	buildfix_dict_parallel.diff)
 options=('!distcc' '!ccache' '!makeflags')
 md5sums=('e3684b9314e4aaafe2b5edf23701d874'
          'a247ba577007d8169201bd8f41cf41b5'
@@ -42,7 +43,8 @@ md5sums=('e3684b9314e4aaafe2b5edf23701d874'
          'bf7119084a2d1e0566b5e34b57dce8eb'
          'a51200f770c635355c430cc5052db8cf'
          '4addae44d20bb2b247e429d88b66a4c1'
-         '4fe2810b40358b0e7dc2df3d056bde7a')
+         '4fe2810b40358b0e7dc2df3d056bde7a'
+         '991b4a9dac2e6b84c45fa6f0494dd41a')
 
 # see ftp://ftp.linux.cz/pub/localization/OpenOffice.org/devel/build/build for upstream build instructions
 
@@ -75,6 +77,8 @@ build() {
 	patch -Np0 -i ${srcdir}/buildfix-gcc43.diff || return 1
 	patch -Np0 -i ${srcdir}/system_hsqldb.diff || return 1
 	patch -Np0 -i ${srcdir}/buildfix-openjdk-6-no-rhino.diff || return 1
+	 # http://qa.openoffice.org/issues/show_bug.cgi?id=93391
+	patch -Np0 -i ${srcdir}/buildfix_dict_parallel.diff || return 1
 
 	# allows xmlsec to be able to read the format of the digital certificates.
 	patch -Np0 -i ${srcdir}/libxmlsec-findcerts.diff || return 1
