Prepare first klibc 1.5.14 release
git-svn-id: file:///srv/repos/svn-packages/svn@12688 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/klibc-extras/trunk/PKGBUILD
+++ b/klibc-extras/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=klibc-extras
 pkgver=2.4
-pkgrel=2
+pkgrel=3
 pkgdesc="Extra apps for klibc early-userspace"
 arch=(i686 x86_64)
 url="http://phraktured.net/initramfs/klibc-extras/"
@@ -18,5 +18,6 @@ build()
   cd $startdir/src/${pkgname}-${pkgver}
 
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR=$startdir/pkg install || return 1
+  rm -f ${pkgdir}/usr/lib/klibc/bin/mknod
 }
