--- a/klibc-kbd/trunk/PKGBUILD
+++ b/klibc-kbd/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=klibc-kbd
 pkgver=1.15.20080312
-pkgrel=6
+pkgrel=7
 pkgdesc="Keytable files and keyboard utilities"
 arch=('i686' 'x86_64')
 url="ftp://ftp.altlinux.org/pub/people/legion/kbd/"
@@ -14,19 +14,22 @@ source=(ftp://ftp.archlinux.org/other/kbd/kbd-$pkgver.tar.gz
         #ftp://ftp.altlinux.org/pub/people/legion/kbd/kbd-${pkgver}.tar.gz
         no-isatty.patch
         no-exit.patch
+        no-fflush.patch
         keymap_install
         keymap_hook)
 md5sums=('709b087bb9d6c073bade70eda2da7770'
          '53e9612ac5fc1b23601f793410742ed3'
          '8c1bec330e8c98355502ac861561667d'
+         '8310d1a6cc72b5827898d0e9e29824ab'
          '735d7268f567deee4db3bed951a8303a'
          '85457e44dfd7046224e87f0add8da4b2')
 
 build() {
   cd ${startdir}/src
   #cd ${startdir}/src/kbd-${pkgver}
-  patch -Np1 -i ../no-isatty.patch
-  patch -Np1 -i ../no-exit.patch
+  patch -Np1 -i no-isatty.patch || return 1
+  patch -Np1 -i no-exit.patch || return 1
+  patch -Np1 -i no-fflush.patch || return 1
 
   aclocal
   autoconf
