--- a/maxima/trunk/PKGBUILD
+++ b/maxima/trunk/PKGBUILD
@@ -1,34 +1,41 @@
 # $Id$
-# Maintainer: damir <damir@archlinux.org>
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Contributor: damir <damir@archlinux.org>
 # Contributor: Damir Perisa <damir.perisa@bluewin.ch>
 
 pkgname=maxima
-pkgver=5.15.0
-pkgrel=3
+pkgver=5.16.3
+pkgrel=1
 pkgdesc="Maxima - a sophisticated computer algebra system"
 arch=("i686" "x86_64")
 license=('GPL')
 url="http://maxima.sourceforge.net"
 depends=('clisp>=2.45' 'librep' 'libsigsegv' 'readline' 'bash')
+optdepends=('tk: graphical xmaxima interface')
+
 # needs rebuild when {readline,bash} changes version
+
 options=('!makeflags')
 install=$pkgname.install
 source=("http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz" "$pkgname.desktop")
-md5sums=('db5338cd384bc0531e76ccdf18d760ef' 'a44160f17c95d4ce1d6f3b4ca7cf6b9e')
+md5sums=('690ee57f3884f565c898ed39a592e4e1'
+         'a44160f17c95d4ce1d6f3b4ca7cf6b9e')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
+  cd $srcdir/$pkgname-$pkgver
   ./configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info
   make || return 1
   make DESTDIR=$startdir/pkg install
+  
   # install some freedesktop.org compatibility
-  install -D -m644 $startdir/src/$pkgname.desktop \
-  $startdir/pkg/usr/share/applications/$pkgname.desktop
+  install -D -m644 $srcdir/$pkgname.desktop \
+  	$pkgdir/usr/share/applications/$pkgname.desktop
+  
   # make sure, we have a nice icon for the desktop file at the right place ;)
-  mkdir -p $startdir/pkg/usr/share/pixmaps/
-  cd $startdir/pkg/usr/share/pixmaps/
-  ln -s /usr/share/maxima/${pkgver}/xmaxima/maxima-new.png ${pkgname}.png
-  rm ${pkgdir}/usr/share/info/dir
+  install -d $pkgdir/usr/share/pixmaps/
+  ln -s /usr/share/maxima/${pkgver}/xmaxima/maxima-new.png \
+	$pkgdir/usr/share/pixmaps/${pkgname}.png
 }
+
 
 
