--- a/openoffice-base/trunk/PKGBUILD
+++ b/openoffice-base/trunk/PKGBUILD
@@ -32,7 +32,7 @@ source=(${pkgname}-${_OO_milestone}.tar.gz
 	buildfix-openjdk-6-no-rhino.diff
 	buildfix_dict_parallel.diff)
 options=('!distcc' '!ccache' '!makeflags')
-md5sums=('e3684b9314e4aaafe2b5edf23701d874'
+md5sums=('9c0980a5c6eebe6a08e1241af6448259'
          'ae7e00eff06bc2921d9ff184ff48556e'
          '71f136a31e296a04ab68932a31dd533e'
          '6c596129fb48316226ce3adfd3a4c86d'
@@ -47,17 +47,18 @@ md5sums=('e3684b9314e4aaafe2b5edf23701d874'
 # see ftp://ftp.linux.cz/pub/localization/OpenOffice.org/devel/build/build for upstream build instructions
 
 build() {
-	cd ${srcdir}
-	export _MILESTONE=${_OO_milestone}
-	export 'CVSROOT=:pserver:anoncvs@anoncvs.services.openoffice.org:/cvs'
+#	mkdir ${srcdir}/${_OO_milestone}
+#	cd ${srcdir}/${_OO_milestone}
+#	export _MILESTONE=${_OO_milestone}
+#	export 'CVSROOT=:pserver:anoncvs@anoncvs.services.openoffice.org:/cvs'
 	# checkout snapshot
 #	cvs -q -z9 co -r $_MILESTONE OpenOffice3
-#	tar -cvzf ../${pkgname}-${_OO_milestone}.tar.gz *
+	# fetch missing modules
+#	cvs -q -z9 co -r $_MILESTONE cppunit hyphen swext apache-commons tomcat reportbuilder
+#	tar -cvzf ../../${pkgname}-${_OO_milestone}.tar.gz *
 #	return 1
 
-	# fetch missing modules
-	cvs -q -z9 co -r $_MILESTONE cppunit hyphen swext apache-commons tomcat reportbuilder
-
+	cd ${srcdir}
 	# just to make sure that it will detect the desired JDK/JVM - we want openjdk6
 	unset J2REDIR; unset J2SDKDIR; unset JAVA_HOME; unset CLASSPATH
 	[ -z "${JAVA_HOME}" ] && . /etc/profile.d/openjdk6.sh
@@ -219,7 +220,7 @@ build() {
 	ln -s ../../opt/openoffice/program/spadmin spadmin
 
 	# install all built dictionaries from source tree
-	for i in `ls -1 ${srcdir}/src/dictionaries/unxlngx6.pro/bin/dict-??.oxt`; do
+	for i in `ls -1 ${srcdir}/dictionaries/unxlngx6.pro/bin/dict-??.oxt`; do
 	  install -Dm644 $i ${pkgdir}/opt/openoffice/share/extension/install/$i || return 1
 	done
 
@@ -256,15 +257,7 @@ build() {
 	chmod +rX -R ${pkgdir}/usr
 
 	# some cleanup
-#	find ${pkgdir}/usr/share/icons -depth -name "CVS" -type d -exec rm -r {} \; > /dev/null 2>&1
-#	rm -f ${pkgdir}/opt/openoffice/program/oo_product.bmp
-#	mkdir -p ${pkgdir}/opt/openoffice/basis-link/share/dict/ooo
-#	touch ${pkgdir}/opt/openoffice/basis-link/share/dict/ooo/.directory 
-#	touch ${pkgdir}/opt/openoffice/basis-link/presets/template/.directory 
-#	touch ${pkgdir}/opt/openoffice/share/extension/install/.directory
-	# remove unecessary temp files if they exist 
-#	rm -f  ${pkgdir}/opt/openoffice/program/root*.dat
-#	rm -f  ${pkgdir}/opt/openoffice/program/root*.dat.*
+	find ${pkgdir}/usr/share/icons -depth -name "CVS" -type d -exec rm -r {} \; > /dev/null 2>&1
 
 	# link the mozilla-plugin
 	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
