fixed pkgver, vendor and shipped dicts
git-svn-id: file:///srv/repos/svn-packages/svn@12756 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openoffice-base/trunk/PKGBUILD
+++ b/openoffice-base/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base
-pkgver=3.0
+pkgver=3.0.0
 pkgrel=0.1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=(i686 x86_64)
@@ -102,8 +102,6 @@ build() {
 
 	cd ${srcdir}/config_office
 
-	# Set OOO_VENDOR in build environment
-	export OOO_VENDOR="ArchLinux"
 	# export C(XX)FLAGS
 	export ARCH_FLAGS="$CFLAGS"
 
@@ -111,6 +109,7 @@ build() {
 	autoreconf -v || return 1
 
 	./configure --with-build-version="${pkgver} ArchLinux build-${pkgrel} (${_OO_milestone})" \
+	--with-vendor="ArchLinux"\
 	--prefix=/usr --exec-prefix=/usr\
 	--disable-ldap\
 	--with-lang="en-US"\
@@ -220,9 +219,11 @@ build() {
 	ln -s ../../opt/openoffice/program/spadmin spadmin
 
 	# install all built dictionaries from source tree
-	for i in `ls -1 ${srcdir}/dictionaries/unxlngx6.pro/bin/dict-??.oxt`; do
-	  install -Dm644 $i ${pkgdir}/opt/openoffice/share/extension/install/$i || return 1
+	pushd ${srcdir}/dictionaries/unxlngx6.pro/bin
+	for i in `ls -1 dict-??.oxt`; do
+	  install -D -m644 $i ${pkgdir}/opt/openoffice/share/extension/install/$i || return 1
 	done
+	popd
 
 	# install shortcuts
 	mv ${pkgdir}/opt/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
