--- a/policykit/trunk/PKGBUILD
+++ b/policykit/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=policykit
 pkgver=0.9
-pkgrel=2
+pkgrel=3
 pkgdesc="Hardware Abstraction Layer"
 arch=(i686 x86_64)
 license=('custom')
@@ -24,10 +24,9 @@ build() {
   patch -Np1 -i ${srcdir}/pk-ck-api-change.patch || return 1
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
               --libexecdir=/usr/lib/PolicyKit --disable-static \
-	      --with-polkit-user=102 --with-polkit-group=102 || return 1
+	      --with-polkit-user=policykit --with-polkit-group=policykit || return 1
   make || return 1
   make DESTDIR=${pkgdir} install || return 1
-  sed -i -e 's/102/policykit/g' ${pkgdir}/etc/dbus-1/system.d/*.conf || return 1
 
   install -m755 -d ${pkgdir}/usr/share/licenses/${pkgname}
   install -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/ || return 1
